# GRC_Aum

./: .gitignore  README.md  pyproject.toml
Documentation/Basic MCP Implementation/FileSystem MCP/: Readme.md
Jarvis-MCP/: GUIDE.md  README.md
MCP Implementation/FileSystem MCP/: FileSystem MCP Client.md  FileSystem MCP Server.md  Readme.md
MCP Implementation/FileSystem MCP/Client/: QuickStart.md
MCP Implementation/FileSystem MCP/Server/: QuickStart.md
MCP-IOWarp/: readme.md
Reports/: Week 1 Report.pptx  Week 2 Report.pptx  Week 3 Report.pptx  Week 4 Report.pptx  Week 5 Report.pptx
Week 1/: MCP Glossary.md  Week 1 Report.pptx
Week 1/Day 2/: MCP vs API.md
Week 1/Day 3/: MCP - Architecture Deep Dive.md
Week 1/Day 4/: MCP Working.md
Week 1/Day 5/: MCP Python SDK.md
Week 1/Day 6/: MCP Setup using Claude and Custom Client.md
mcp-py/: pyproject.toml
mcp-py-2/: hello.py  pyproject.toml  weather.py
mcp-py-2/mcp-client/: .env  client.py
