[project]
name = "mcp-all"
version = "0.1.0"
description = "Install many MCPs together with one simple UV command"
requires-python = ">=3.12"

dependencies = [
  # "your-mcp" as a name, referencing the same Git repo but subdirectory, for example
  "filesystem-mcp @ git+https://github.com/{username}.git@{branch-name}#subdirectory={subdirectory of filesystem-mcp}",
  # "mcp-2" likewise
  "mcp-2 @ git+https://github.com/aumsathwara/MCP.git@main#subdirectory=MCP_2"
]
